--- a/document.html
+++ b/document.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *
+        {
+            padding: 0px;
+            margin: 0px;
+            box-sizing: border-box;
+        }
+        h1
+        {
+            animation: left 4s ease-out 0.6s 4 forwards ;
+            position: relative;
+            opacity: 0;
+        }
+        @keyframes left {
+            to{
+                opacity: 1;
+            }
+
+            
+        }
+    </style>
 </head>
 <body>
+    <h1>hello this is alish</h1>
     <script>
         document.write("hello world")
         console.log("hehe")
